<resources>
    <string name="app_name">SiPi</string>
    <string name="login">MASUK</string>
    <string name="register">DAFTAR</string>
    <string name="logout">KELUAR</string>
    <string name="username">Masukkan username</string>
    <string name="password">Masukkan kata sandi</string>
    <string name="title_home">Beranda</string>
    <string name="tittle_add_report">Buat Laporan</string>
    <string name="title_profile">Profil</string>
    <string name="email">Masukkan email</string>
    <string name="name">Masukkan nama</string>
    <string name="report_name">Nama Laporan</string>
    <string name="report_sender">Pengirim Laporan</string>
    <string name="report_status">Tingkat Kerusakan</string>
    <string name="input_report_name">Masukkan nama laporan</string>
    <string name="report_location">Lokasi Kerusakan</string>
    <string name="input_report_location">Masukkan lokasi kerusakan</string>
    <string name="report_image">Bukti Kerusakan</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="report_result">Hasil</string>
    <string name="email_required">Email harus diisi</string>
    <string name="password_required">Password harus diisi</string>
    <string name="email_invalid">Email tidak sesuai</string>
    <string name="login_text">Masukkan email/username</string>
    <string name="name_required">Nama harus diisi</string>
    <string name="username_required">Username harus diisi</string>
    <string name="send_report">Kirim Laporan</string>
    <string name="no_data">Tidak ada data.</string>
    <string name="detail_report">Detail Laporan</string>
</resources>