<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/report_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/report_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_name"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/report_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_sender"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/report_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_status"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>